Update VirtualThreads example